cmake_minimum_required(VERSION 3.20)
project(The_CPP_Workshop_Ch01)

set(CMAKE_CXX_STANDARD 14)

add_executable(ch01_ac01 ../Activities/Activity01.cpp)
add_executable(ch01_ex01 Exercise01.cpp)
add_executable(ch01_ex02 Exercise02.cpp)
add_executable(ch01_ex03 Exercise03.cpp)
add_executable(ch01_ex04 Exercise04.cpp)