cmake_minimum_required(VERSION 3.20)
project(The_CPP_Workshop_Ch02)

set(CMAKE_CXX_STANDARD 14)

add_executable(ch02_ex05   Exercise05.cpp)
add_executable(ch02_ex06   Exercise06.cpp)
add_executable(ch02_ex07   Exercise07.cpp)
add_executable(ch02_ex08   Exercise08.cpp)
add_executable(ch02_ex09_1 Exercise09_1.cpp)
add_executable(ch02_ex09_2 Exercise09_2.cpp)
add_executable(ch02_ex10   Exercise10.cpp)
add_executable(ch02_ex11   Exercise11.cpp)
add_executable(ch02_ex12   Exercise12.cpp)