cmake_minimum_required(VERSION 3.20)
project(The_CPP_Workshop_ch02)

set(CMAKE_CXX_STANDARD 17)

add_executable(ch02_a02 ch02_a02.cpp)
add_executable(ch02_e05 ch02_e05.cpp)
add_executable(ch02_e06 ch02_e06.cpp)
add_executable(ch02_e07 ch02_e07.cpp)
add_executable(ch02_e08 ch02_e08.cpp)
add_executable(ch02_e09_1 ch02_e09_1.cpp)
add_executable(ch02_e09_2 ch02_e09_2.cpp)
add_executable(ch02_e10 ch02_e10.cpp)
add_executable(ch02_e11 ch02_e11.cpp)
add_executable(ch02_e12 ch02_e12.cpp)







