cmake_minimum_required(VERSION 3.20)
project(The_CPP_Workshop_ch03)

set(CMAKE_CXX_STANDARD 17)

add_executable(ch03_a01 ch03_a01.cpp)
add_executable(ch03_e13 ch03_e13.cpp)
add_executable(ch03_e14 ch03_e14.cpp)
add_executable(ch03_e15 ch03_e15.cpp)
add_executable(ch03_e16 ch03_e16.cpp)
add_executable(ch03_e17 ch03_e17.cpp)
add_executable(ch03_e18 ch03_e18.cpp)
add_executable(ch03_e19 ch03_e19.cpp)
add_executable(ch03_e20 ch03_e20.cpp)