cmake_minimum_required(VERSION 3.20)
project(The_CPP_Workshop_Ch05)

set(CMAKE_CXX_STANDARD 14)

add_executable(ch05_ex26 Exercise26.cpp)
add_executable(ch05_ex27 Exercise27.cpp)
add_executable(ch05_ex28 Exercise28.cpp)
add_executable(ch05_ex29 Exercise29.cpp)
add_executable(ch05_ex30 Exercise30.cpp)
add_executable(ch05_ex31 Exercise31.cpp)
add_executable(ch05_ex32 Exercise32.cpp)
add_executable(ch05_ex33 Exercise33.cpp)
add_executable(ch05_ex34 Exercise34.cpp)
add_executable(ch05_ex35 Exercise35.cpp)
add_executable(ch05_ex36 Exercise36.cpp)