cmake_minimum_required(VERSION 3.20)
project(The_CPP_Workshop_ch05)

set(CMAKE_CXX_STANDARD 17)

add_executable(ch05_e26 ch05_e26.cpp)
add_executable(ch05_e27 ch05_e27.cpp)
add_executable(ch05_e28 Exercise28.cpp)
add_executable(ch05_e29 Exercise29.cpp)
add_executable(ch05_e30 Exercise30.cpp)
add_executable(ch05_e31 Exercise31.cpp)
add_executable(ch05_e32 Exercise32.cpp)
add_executable(ch05_e33 Exercise33.cpp)
add_executable(ch05_e34 Exercise34.cpp)
add_executable(ch05_e35 Exercise35.cpp)
add_executable(ch05_e36 Exercise36.cpp)