cmake_minimum_required(VERSION 3.20)
project(The_CPP_Workshop_ch05)

set(CMAKE_CXX_STANDARD 17)

add_executable(ch05_e26 ch05_e26.cpp)
add_executable(ch05_e27 ch05_e27.cpp)
add_executable(ch05_e28 ch05_e28.cpp)
add_executable(ch05_e29 ch05_e29.cpp)
add_executable(ch05_e30 ch05_e30.cpp)
add_executable(ch05_e31 ch05_e31.cpp)
add_executable(ch05_e32 ch05_e32.cpp)
add_executable(ch05_e33 ch05_e33.cpp)
add_executable(ch05_e34 ch05_e34.cpp)
add_executable(ch05_e35 ch05_e35.cpp)
add_executable(ch05_e36 ch05_e36.cpp)