cmake_minimum_required(VERSION 3.20)
project(The_CPP_Workshop_Ch06)

set(CMAKE_CXX_STANDARD 14)

add_executable(ch06_ex37 Exercise37.cpp)
add_executable(ch06_ex38 Exercise38.cpp)
add_executable(ch06_ex39 Exercise39.cpp)
add_executable(ch06_ex40 Exercise40.cpp)
add_executable(ch06_ex41 Exercise41.cpp)
add_executable(ch06_ex42 Exercise42.cpp)
add_executable(ch06_ex43 Exercise43.cpp)
add_executable(ch06_ex44 Exercise44.cpp)
add_executable(ch06_ex45 Exercise45.cpp)
add_executable(ch06_ex46 Exercise46.cpp)
add_executable(ch06_ex47 Exercise47.cpp)
add_executable(ch06_ex48 Exercise48.cpp)