cmake_minimum_required(VERSION 3.20)
project(The_CPP_Workshop_Ch07)

set(CMAKE_CXX_STANDARD 14)

add_executable(ch07_ex49 Exercise49.cpp)
add_executable(ch07_ex50 Exercise50.cpp)
add_executable(ch07_ex51 Exercise51.cpp)
add_executable(ch07_ex52 Exercise52.cpp)
add_executable(ch07_ex53 Exercise53.cpp)
add_executable(ch07_ex54 Exercise54.cpp)
add_executable(ch07_ex55 Exercise55.cpp)
add_executable(ch07_ex56 Exercise56.cpp)
add_executable(ch07_ex57 Exercise57.cpp)